--- a/app/src/main/res/layout/fragment_customer_flow.xml
+++ b/app/src/main/res/layout/fragment_customer_flow.xml
@@ -18,7 +18,85 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
+            <Spinner
+                android:id="@+id/Spinner"
+                android:layout_margin="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/tvRepayment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/DynamicsCustomerRepayment"
+                style="@style/BoldTextStyle"
+                android:layout_margin="20dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Spinner" />
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/bcRepayment"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="14dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvRepayment" />
+
+            <TextView
+                android:id="@+id/tvOperationalRecords"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/OperationalRecords"
+                style="@style/BoldTextStyle"
+                android:layout_margin="20dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bcRepayment" />
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/bcOperationalRecords"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="14dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvOperationalRecords" />
+
+            <TextView
+                android:id="@+id/tvCustomerFlow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/FlowCustomersPerYear"
+                style="@style/BoldTextStyle"
+                android:layout_margin="20dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bcOperationalRecords" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/lcCustomerFlow"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:layout_marginHorizontal="14dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="86dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvCustomerFlow" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
