--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,7 +55,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tvAddress"
                 app:srcCompat="@drawable/ic_location"
-                app:tint="@color/blueLight" />
+                app:tint="@color/blue" />
 
             <TextView
                 android:id="@+id/tvAddress"
@@ -94,43 +94,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ivGruop"
                 app:layout_constraintTop_toBottomOf="@+id/tvAddress" />
-
-            <TextView
-                android:id="@+id/tvAdviсe"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="44dp"
-                android:text="@string/Adviсe"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="22sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvCountEmployee" />
-
-            <ImageView
-                android:id="@+id/ivRecomendacion"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_marginStart="18dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tvRecomendacion"
-                app:srcCompat="@drawable/ic_circle"
-                app:tint="@color/green"/>
-
-            <TextView
-                android:id="@+id/tvRecomendacion"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="20dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="20dp"
-                android:text="@string/NoRecommendationsYet"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/ivRecomendacion"
-                app:layout_constraintTop_toBottomOf="@+id/tvAdviсe" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
